# OptimalGridColoring-BnB

./: .gitignore  BoundCalculations_8cpp.html  BoundCalculations_8cpp__incl.map  BoundCalculations_8hpp.html  BoundCalculations_8hpp__dep__incl.map  BoundCalculations_8hpp__dep__incl.md5  BoundCalculations_8hpp__incl.map  BoundCalculations_8hpp__incl.md5  BoundCalculations_8hpp_source.html  BranchAndBound_8cpp.html  BranchAndBound_8cpp__incl.map  BranchAndBound_8cpp__incl.md5  BranchAndBound_8hpp.html  BranchAndBound_8hpp__dep__incl.map  BranchAndBound_8hpp__dep__incl.md5  BranchAndBound_8hpp__incl.map  BranchAndBound_8hpp__incl.md5  BranchAndBound_8hpp_source.html  CMakeLists.txt  Doxyfile  GraphDefinition_8cpp.html  GraphDefinition_8cpp__incl.map  GraphDefinition_8hpp.html  GraphDefinition_8hpp__dep__incl.map  GraphDefinition_8hpp__incl.map  GraphDefinition_8hpp_source.html  README.md  README_8md.html  annotated.html  classGrid1D-members.html  classGrid1D.html  classGrid1D__coll__graph.map  classes.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f606c5d2e44b49039e51b06719855b5b.html  dir_f606c5d2e44b49039e51b06719855b5b_dep.map  dir_f606c5d2e44b49039e51b06719855b5b_dep.md5  files.html  (+11 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  searchdata.js  variables_1.js  (+3 more)
(+103 files in other folders)
